# Battery

./: .gitignore  CMakeLists.txt  Makefile  README.md  SetupService.sh  bat_limiter.c  batconfig.h.in  config.json  setting.nn  template.txt  vbat
scripts/: template.txt
src/: main.c
